2004-12-10  Adam Heath  <doogie@brainfood.com>

	* config/i386/jit3-i386.def, kaffe/kaffevm/jit3/basecode.c,
	  libraries/clib/native/Runtime.c:
	  Add NONRETURNING annotation.

2004-12-10  Adam Heath  <doogie@brainfood.com>

	* tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/Parser.java:
	  Fix some more access of static fields/methods on instances.
 
2004-12-10  Adam Heath  <doogie@brainfood.com>

	* libraries/javalib/Klasses.jar.bootstrap:
	  Updated java/math/BigInteger.class, and added
	  java/math/BigDecimal.class.

2004-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	tools/gjdoc/javalib/Makefile.am,
	tools/gjdoc/javalib/Makefile.in,:
	Regenerated.

	* tools/gjdoc/javalib/gnu/classpath/tools/MalformedInputEvent.java,
	tools/gjdoc/javalib/gnu/classpath/tools/MalformedInputListener.java,
	tools/gjdoc/javalib/gnu/classpath/tools/NotifyingInputStreamReader.java,
	tools/gjdoc/javalib/gnu/classpath/tools/IOToolkit.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/AbstractDoclet.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/htmldoclet/CssClass.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/htmldoclet/HtmlDoclet.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/htmldoclet/HtmlPage.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/xmldoclet/Driver.java,
	tools/gjdoc/javalib/gnu/classpath/tools/doclets/xmldoclet/HtmlRepairer.java,
	tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/AbstractTagImpl.java,
	tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/DocImpl.java,
	tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/Main.java,
	tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/PackageDocImpl.java,
	tools/gjdoc/javalib/gnu/classpath/tools/gjdoc/Parser.java,
	tools/gjdoc/javalib/gnu/classpath/tools/java2xhtml/Java2xhtml.java:
	Resynced with gjdoc.

	2004-12-10  Julian Scheid <julian@sektor37.de>

	* src/gnu/classpath/tools/doclets/AbstractDoclet.java: handle
	multiple source directories.
