@@ -1,5 +1,13 @@
 2004-12-10  Adam Heath  <doogie@brainfood.com>
 
+	* kaffe/kaffevm/systems/unix-pthreads/signal.c,
+	  kaffe/kaffevm/systems/unix-pthreads/thread-impl.c,
+	  libraries/clib/management/Debug.c,
+	  libraries/clib/management/XProfiler.c:
+	  Add UNUSED annotation to several parameters.
+
+2004-12-10  Adam Heath  <doogie@brainfood.com>
+
 	* config/i386/jit3-i386.def, kaffe/kaffevm/jit3/basecode.c,
 	  libraries/clib/native/Runtime.c:
 	  Add NONRETURNING annotation.
